--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header class="">
       <!-------------------------------- Navigation Bar ------------------------------------------------>
       <nav
-        class="flex flex-col md:flex-row justify-between gap-8 items-center py-10 md:py-5 md:px-10"
+        class="flex flex-col md:flex-row justify-between px-3 gap-5 items-center py-10 md:py-5 md:px-10"
       >
         <div class="flex items-center gap-2">
           <img class="w-13 h-13" src="assets/logo.png" alt="" />
@@ -43,7 +43,9 @@
           </h5>
         </div>
 
-        <div class="flex gap-4 h-[52px]">
+      <!-------------------------------- Count Items ------------------------------------------------>
+
+        <div class="flex gap-4  h-[52px]">
           <div class="bg-[#FFEFF0] flex items-center justify-center px-7 rounded-full gap-2">
             <h5 class="font-semibold text-[20px]">0</h5>
             <img class="w-8 h-8" src="assets/heart.png" alt="" />
@@ -62,7 +64,7 @@
       </nav>
       <!-------------------------------- Hero Section ------------------------------------------------>
       <section
-        class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] p-10 flex flex-col items-center justify-center"
+        class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] py-10 px-3 flex flex-col items-center justify-center"
       >
         <img class="w-20" src="assets/logo-dark.png" alt="" />
         <h5 class="text-white font-semi-bold text-[42px] text-center">
@@ -76,7 +78,7 @@
     </header>
 
     
-    <main class="flex flex-col gap-10 md:flex-row justify-between p-8 md:p-20">
+    <main class="flex flex-col gap-10 md:flex-row justify-between py-10 px-5 md:p-20">
 
         <!-------------------------------- Card Section ------------------------------------------------>
 
@@ -123,15 +125,15 @@
       <section class=" h-full md:w-1/4 bg-white p-5 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]">
 
         <div class="flex items-center justify-between">
-        <h5 class="text-[24px] font-semibold"><i class="fa-regular fa-clock"></i> Call History</h5>
-        <button class="text-[18px] text-white py-3 px-8 rounded-full bg-[#00A63E]">Clear</button>
+        <h5 class="text-[20px] md:text-[24px] font-semibold"><i class="fa-regular fa-clock"></i> Call History</h5>
+        <button class="text-[18px] text-white py-1 md:py-3 px-3 md:px-8 rounded-full bg-[#00A63E]">Clear</button>
         </div>
 
         <div class="mt-4 flex flex-col gap-3">
 
             <div class="bg-[#F6F6F6] px-5 py-3 rounded-2xl flex justify-between">
                 <div>
-                 <h2 class="font-medium text-[22px]">Fire Service Number</h2>
+                 <h2 class="font-medium text-[18px] md:text-[22px]">Fire Service Number</h2>
                 <p class="text-[24px] text-[#5C5C5C]">999</p>
                 </div>
                 <p class="text-[18px]">11:36:58 AM</p>
