--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
       </nav>
       <!-------------------------------- Hero Section ------------------------------------------------>
       <section
-        class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] py-10 px-3 flex flex-col items-center justify-center"
+        class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] py-10 px-3 flex flex-col gap-4 items-center justify-center"
       >
         <img class="w-20" src="assets/logo-dark.png" alt="" />
-        <h5 class="text-white font-semi-bold text-[42px] text-center">
+        <h5 class="text-white font-semi-bold  text-[42px] leading-[2.9rem] text-center">
           Emergency Service Directory
         </h5>
         <p class="text-white font-semi-bold text-[22px] text-center">
@@ -78,11 +78,12 @@
     </header>
 
     
-    <main class="flex flex-col gap-10 md:flex-row justify-between py-10 px-5 md:p-20">
+    <main class="flex flex-col-reverse gap-10 md:flex-row justify-between py-10 px-5 md:p-20">
 
         <!-------------------------------- Card Section ------------------------------------------------>
 
-      <section class="grid grid-cols-1 md:grid-cols-3 gap-15">
+      <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
+
         <div
           class="flex flex-col gap-5 justify-between bg-white card w-full p-5 md:p-8 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]"
         >
@@ -118,11 +119,293 @@
             </button>
           </div>
         </div>
+        <div
+          class="flex flex-col gap-5 justify-between bg-white card w-full p-5 md:p-8 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]"
+        >
+          <div class="flex items-center justify-between">
+            <img
+              class="bg-[#FFE3E2] p-3 rounded-[18px] max-w-20"
+              src="assets/ambulance.png"
+              alt=""
+            />
+            <i class="text-[#5C5C5C] fa-regular fa-heart text-[30px]"></i>
+          </div>
+
+          <div>
+            <h2 class="text-[24px] font-semibold">National Emergency Number</h2>
+            <p class="text-[#5C5C5C] text-[18px]">National Emergency</p>
+            <h5 class="mb-2 text-[32px] font-semibold">999</h5>
+            <span class="bg-[#F2F2F2] px-5 py-2 rounded-full text-[18px]"
+              >All</span
+            >
+          </div>
+
+          <div class="flex gap-4">
+            <button
+              class="text-[#5C5C5C] text-[18px] border-2 border-[#D4D6D5] py-3 w-full rounded-2xl"
+            >
+              <i class="fa-regular fa-copy mr-3"></i>Copy
+            </button>
+
+            <button
+              class="bg-[#00A63E] text-[#ffff] text-[18px] py-3 w-full rounded-2xl"
+            >
+              <i class="fa-solid fa-phone mr-3"></i>Call
+            </button>
+          </div>
+        </div>
+        <div
+          class="flex flex-col gap-5 justify-between bg-white card w-full p-5 md:p-8 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]"
+        >
+          <div class="flex items-center justify-between">
+            <img
+              class="bg-[#FFE3E2] p-3 rounded-[18px] max-w-20"
+              src="assets/ambulance.png"
+              alt=""
+            />
+            <i class="text-[#5C5C5C] fa-regular fa-heart text-[30px]"></i>
+          </div>
+
+          <div>
+            <h2 class="text-[24px] font-semibold">National Emergency Number</h2>
+            <p class="text-[#5C5C5C] text-[18px]">National Emergency</p>
+            <h5 class="mb-2 text-[32px] font-semibold">999</h5>
+            <span class="bg-[#F2F2F2] px-5 py-2 rounded-full text-[18px]"
+              >All</span
+            >
+          </div>
+
+          <div class="flex gap-4">
+            <button
+              class="text-[#5C5C5C] text-[18px] border-2 border-[#D4D6D5] py-3 w-full rounded-2xl"
+            >
+              <i class="fa-regular fa-copy mr-3"></i>Copy
+            </button>
+
+            <button
+              class="bg-[#00A63E] text-[#ffff] text-[18px] py-3 w-full rounded-2xl"
+            >
+              <i class="fa-solid fa-phone mr-3"></i>Call
+            </button>
+          </div>
+        </div>
+        <div
+          class="flex flex-col gap-5 justify-between bg-white card w-full p-5 md:p-8 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]"
+        >
+          <div class="flex items-center justify-between">
+            <img
+              class="bg-[#FFE3E2] p-3 rounded-[18px] max-w-20"
+              src="assets/ambulance.png"
+              alt=""
+            />
+            <i class="text-[#5C5C5C] fa-regular fa-heart text-[30px]"></i>
+          </div>
+
+          <div>
+            <h2 class="text-[24px] font-semibold">National Emergency Number</h2>
+            <p class="text-[#5C5C5C] text-[18px]">National Emergency</p>
+            <h5 class="mb-2 text-[32px] font-semibold">999</h5>
+            <span class="bg-[#F2F2F2] px-5 py-2 rounded-full text-[18px]"
+              >All</span
+            >
+          </div>
+
+          <div class="flex gap-4">
+            <button
+              class="text-[#5C5C5C] text-[18px] border-2 border-[#D4D6D5] py-3 w-full rounded-2xl"
+            >
+              <i class="fa-regular fa-copy mr-3"></i>Copy
+            </button>
+
+            <button
+              class="bg-[#00A63E] text-[#ffff] text-[18px] py-3 w-full rounded-2xl"
+            >
+              <i class="fa-solid fa-phone mr-3"></i>Call
+            </button>
+          </div>
+        </div>
+        <div
+          class="flex flex-col gap-5 justify-between bg-white card w-full p-5 md:p-8 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]"
+        >
+          <div class="flex items-center justify-between">
+            <img
+              class="bg-[#FFE3E2] p-3 rounded-[18px] max-w-20"
+              src="assets/ambulance.png"
+              alt=""
+            />
+            <i class="text-[#5C5C5C] fa-regular fa-heart text-[30px]"></i>
+          </div>
+
+          <div>
+            <h2 class="text-[24px] font-semibold">National Emergency Number</h2>
+            <p class="text-[#5C5C5C] text-[18px]">National Emergency</p>
+            <h5 class="mb-2 text-[32px] font-semibold">999</h5>
+            <span class="bg-[#F2F2F2] px-5 py-2 rounded-full text-[18px]"
+              >All</span
+            >
+          </div>
+
+          <div class="flex gap-4">
+            <button
+              class="text-[#5C5C5C] text-[18px] border-2 border-[#D4D6D5] py-3 w-full rounded-2xl"
+            >
+              <i class="fa-regular fa-copy mr-3"></i>Copy
+            </button>
+
+            <button
+              class="bg-[#00A63E] text-[#ffff] text-[18px] py-3 w-full rounded-2xl"
+            >
+              <i class="fa-solid fa-phone mr-3"></i>Call
+            </button>
+          </div>
+        </div>
+        <div
+          class="flex flex-col gap-5 justify-between bg-white card w-full p-5 md:p-8 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]"
+        >
+          <div class="flex items-center justify-between">
+            <img
+              class="bg-[#FFE3E2] p-3 rounded-[18px] max-w-20"
+              src="assets/ambulance.png"
+              alt=""
+            />
+            <i class="text-[#5C5C5C] fa-regular fa-heart text-[30px]"></i>
+          </div>
+
+          <div>
+            <h2 class="text-[24px] font-semibold">National Emergency Number</h2>
+            <p class="text-[#5C5C5C] text-[18px]">National Emergency</p>
+            <h5 class="mb-2 text-[32px] font-semibold">999</h5>
+            <span class="bg-[#F2F2F2] px-5 py-2 rounded-full text-[18px]"
+              >All</span
+            >
+          </div>
+
+          <div class="flex gap-4">
+            <button
+              class="text-[#5C5C5C] text-[18px] border-2 border-[#D4D6D5] py-3 w-full rounded-2xl"
+            >
+              <i class="fa-regular fa-copy mr-3"></i>Copy
+            </button>
+
+            <button
+              class="bg-[#00A63E] text-[#ffff] text-[18px] py-3 w-full rounded-2xl"
+            >
+              <i class="fa-solid fa-phone mr-3"></i>Call
+            </button>
+          </div>
+        </div>
+        <div
+          class="flex flex-col gap-5 justify-between bg-white card w-full p-5 md:p-8 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]"
+        >
+          <div class="flex items-center justify-between">
+            <img
+              class="bg-[#FFE3E2] p-3 rounded-[18px] max-w-20"
+              src="assets/ambulance.png"
+              alt=""
+            />
+            <i class="text-[#5C5C5C] fa-regular fa-heart text-[30px]"></i>
+          </div>
+
+          <div>
+            <h2 class="text-[24px] font-semibold">National Emergency Number</h2>
+            <p class="text-[#5C5C5C] text-[18px]">National Emergency</p>
+            <h5 class="mb-2 text-[32px] font-semibold">999</h5>
+            <span class="bg-[#F2F2F2] px-5 py-2 rounded-full text-[18px]"
+              >All</span
+            >
+          </div>
+
+          <div class="flex gap-4">
+            <button
+              class="text-[#5C5C5C] text-[18px] border-2 border-[#D4D6D5] py-3 w-full rounded-2xl"
+            >
+              <i class="fa-regular fa-copy mr-3"></i>Copy
+            </button>
+
+            <button
+              class="bg-[#00A63E] text-[#ffff] text-[18px] py-3 w-full rounded-2xl"
+            >
+              <i class="fa-solid fa-phone mr-3"></i>Call
+            </button>
+          </div>
+        </div>
+        <div
+          class="flex flex-col gap-5 justify-between bg-white card w-full p-5 md:p-8 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]"
+        >
+          <div class="flex items-center justify-between">
+            <img
+              class="bg-[#FFE3E2] p-3 rounded-[18px] max-w-20"
+              src="assets/ambulance.png"
+              alt=""
+            />
+            <i class="text-[#5C5C5C] fa-regular fa-heart text-[30px]"></i>
+          </div>
+
+          <div>
+            <h2 class="text-[24px] font-semibold">National Emergency Number</h2>
+            <p class="text-[#5C5C5C] text-[18px]">National Emergency</p>
+            <h5 class="mb-2 text-[32px] font-semibold">999</h5>
+            <span class="bg-[#F2F2F2] px-5 py-2 rounded-full text-[18px]"
+              >All</span
+            >
+          </div>
+
+          <div class="flex gap-4">
+            <button
+              class="text-[#5C5C5C] text-[18px] border-2 border-[#D4D6D5] py-3 w-full rounded-2xl"
+            >
+              <i class="fa-regular fa-copy mr-3"></i>Copy
+            </button>
+
+            <button
+              class="bg-[#00A63E] text-[#ffff] text-[18px] py-3 w-full rounded-2xl"
+            >
+              <i class="fa-solid fa-phone mr-3"></i>Call
+            </button>
+          </div>
+        </div>
+        <div
+          class="flex flex-col gap-5 justify-between bg-white card w-full p-5 md:p-8 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]"
+        >
+          <div class="flex items-center justify-between">
+            <img
+              class="bg-[#FFE3E2] p-3 rounded-[18px] max-w-20"
+              src="assets/ambulance.png"
+              alt=""
+            />
+            <i class="text-[#5C5C5C] fa-regular fa-heart text-[30px]"></i>
+          </div>
+
+          <div>
+            <h2 class="text-[24px] font-semibold">National Emergency Number</h2>
+            <p class="text-[#5C5C5C] text-[18px]">National Emergency</p>
+            <h5 class="mb-2 text-[32px] font-semibold">999</h5>
+            <span class="bg-[#F2F2F2] px-5 py-2 rounded-full text-[18px]"
+              >All</span
+            >
+          </div>
+
+          <div class="flex gap-4">
+            <button
+              class="text-[#5C5C5C] text-[18px] border-2 border-[#D4D6D5] py-3 w-full rounded-2xl"
+            >
+              <i class="fa-regular fa-copy mr-3"></i>Copy
+            </button>
+
+            <button
+              class="bg-[#00A63E] text-[#ffff] text-[18px] py-3 w-full rounded-2xl"
+            >
+              <i class="fa-solid fa-phone mr-3"></i>Call
+            </button>
+          </div>
+        </div>
+
+
       </section>
 
     <!-------------------------------- SidBar Section ------------------------------------------------>
 
-      <section class=" h-full md:w-1/4 bg-white p-5 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]">
+      <section class="flex flex-col h-full md:w-2/6 bg-white p-5 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]">
 
         <div class="flex items-center justify-between">
         <h5 class="text-[20px] md:text-[24px] font-semibold"><i class="fa-regular fa-clock"></i> Call History</h5>
