--- a/index.html
+++ b/index.html
@@ -119,24 +119,27 @@
             </button>
           </div>
         </div>
+
+ <!-------------------------------- Police Helpline Number ------------------------------------------------>
+
         <div
           class="flex flex-col gap-5 justify-between bg-white card w-full p-5 md:p-8 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]"
         >
           <div class="flex items-center justify-between">
             <img
-              class="bg-[#FFE3E2] p-3 rounded-[18px] max-w-20"
-              src="assets/ambulance.png"
+              class="bg-[#DFEFFF] p-3 rounded-[18px] max-w-20"
+              src="assets/police.png"
               alt=""
             />
             <i class="text-[#5C5C5C] fa-regular fa-heart text-[30px]"></i>
           </div>
 
           <div>
-            <h2 class="text-[24px] font-semibold">National Emergency Number</h2>
-            <p class="text-[#5C5C5C] text-[18px]">National Emergency</p>
+            <h2 class="text-[24px] font-semibold">Police Helpline Number</h2>
+            <p class="text-[#5C5C5C] text-[18px]">Police</p>
             <h5 class="mb-2 text-[32px] font-semibold">999</h5>
             <span class="bg-[#F2F2F2] px-5 py-2 rounded-full text-[18px]"
-              >All</span
+              >Police</span
             >
           </div>
 
@@ -154,24 +157,26 @@
             </button>
           </div>
         </div>
+ <!-------------------------------- Fire Service Number ------------------------------------------------>
+
         <div
           class="flex flex-col gap-5 justify-between bg-white card w-full p-5 md:p-8 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]"
         >
           <div class="flex items-center justify-between">
             <img
               class="bg-[#FFE3E2] p-3 rounded-[18px] max-w-20"
-              src="assets/ambulance.png"
+              src="assets/fire-service.png"
               alt=""
             />
             <i class="text-[#5C5C5C] fa-regular fa-heart text-[30px]"></i>
           </div>
 
           <div>
-            <h2 class="text-[24px] font-semibold">National Emergency Number</h2>
-            <p class="text-[#5C5C5C] text-[18px]">National Emergency</p>
+            <h2 class="text-[24px] font-semibold">Fire Service Number</h2>
+            <p class="text-[#5C5C5C] text-[18px]">Fire Service</p>
             <h5 class="mb-2 text-[32px] font-semibold">999</h5>
             <span class="bg-[#F2F2F2] px-5 py-2 rounded-full text-[18px]"
-              >All</span
+              >Fire</span
             >
           </div>
 
@@ -189,6 +194,8 @@
             </button>
           </div>
         </div>
+ <!-------------------------------- Ambulance Service ------------------------------------------------>
+
         <div
           class="flex flex-col gap-5 justify-between bg-white card w-full p-5 md:p-8 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]"
         >
@@ -202,11 +209,11 @@
           </div>
 
           <div>
-            <h2 class="text-[24px] font-semibold">National Emergency Number</h2>
-            <p class="text-[#5C5C5C] text-[18px]">National Emergency</p>
-            <h5 class="mb-2 text-[32px] font-semibold">999</h5>
+            <h2 class="text-[24px] font-semibold">Ambulance Service</h2>
+            <p class="text-[#5C5C5C] text-[18px]">Ambulance</p>
+            <h5 class="mb-2 text-[32px] font-semibold">1994-999999</h5>
             <span class="bg-[#F2F2F2] px-5 py-2 rounded-full text-[18px]"
-              >All</span
+              >Health</span
             >
           </div>
 
@@ -224,24 +231,26 @@
             </button>
           </div>
         </div>
+ <!-------------------------------- Women & Child Helpline ------------------------------------------------>
+
         <div
           class="flex flex-col gap-5 justify-between bg-white card w-full p-5 md:p-8 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]"
         >
           <div class="flex items-center justify-between">
             <img
               class="bg-[#FFE3E2] p-3 rounded-[18px] max-w-20"
-              src="assets/ambulance.png"
+              src="assets/emergency.png"
               alt=""
             />
             <i class="text-[#5C5C5C] fa-regular fa-heart text-[30px]"></i>
           </div>
 
           <div>
-            <h2 class="text-[24px] font-semibold">National Emergency Number</h2>
-            <p class="text-[#5C5C5C] text-[18px]">National Emergency</p>
-            <h5 class="mb-2 text-[32px] font-semibold">999</h5>
+            <h2 class="text-[24px] font-semibold">Women & Child Helpline</h2>
+            <p class="text-[#5C5C5C] text-[18px]">Women & Child Helpline</p>
+            <h5 class="mb-2 text-[32px] font-semibold">109</h5>
             <span class="bg-[#F2F2F2] px-5 py-2 rounded-full text-[18px]"
-              >All</span
+              >Help</span
             >
           </div>
 
@@ -259,24 +268,26 @@
             </button>
           </div>
         </div>
+ <!-------------------------------- Anti-Corruption Helpline ------------------------------------------------>
+
         <div
           class="flex flex-col gap-5 justify-between bg-white card w-full p-5 md:p-8 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]"
         >
           <div class="flex items-center justify-between">
             <img
               class="bg-[#FFE3E2] p-3 rounded-[18px] max-w-20"
-              src="assets/ambulance.png"
+              src="assets/emergency.png"
               alt=""
             />
             <i class="text-[#5C5C5C] fa-regular fa-heart text-[30px]"></i>
           </div>
 
           <div>
-            <h2 class="text-[24px] font-semibold">National Emergency Number</h2>
-            <p class="text-[#5C5C5C] text-[18px]">National Emergency</p>
-            <h5 class="mb-2 text-[32px] font-semibold">999</h5>
+            <h2 class="text-[24px] font-semibold">Anti-Corruption Helpline</h2>
+            <p class="text-[#5C5C5C] text-[18px]">Anti-Corruption</p>
+            <h5 class="mb-2 text-[32px] font-semibold">106</h5>
             <span class="bg-[#F2F2F2] px-5 py-2 rounded-full text-[18px]"
-              >All</span
+              >Govt.</span
             >
           </div>
 
@@ -294,24 +305,26 @@
             </button>
           </div>
         </div>
+ <!-------------------------------- Electricity Helpline ------------------------------------------------>
+
         <div
           class="flex flex-col gap-5 justify-between bg-white card w-full p-5 md:p-8 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]"
         >
           <div class="flex items-center justify-between">
             <img
               class="bg-[#FFE3E2] p-3 rounded-[18px] max-w-20"
-              src="assets/ambulance.png"
+              src="assets/emergency.png"
               alt=""
             />
             <i class="text-[#5C5C5C] fa-regular fa-heart text-[30px]"></i>
           </div>
 
           <div>
-            <h2 class="text-[24px] font-semibold">National Emergency Number</h2>
-            <p class="text-[#5C5C5C] text-[18px]">National Emergency</p>
-            <h5 class="mb-2 text-[32px] font-semibold">999</h5>
+            <h2 class="text-[24px] font-semibold">Electricity Helpline</h2>
+            <p class="text-[#5C5C5C] text-[18px]">Electricity Outage</p>
+            <h5 class="mb-2 text-[32px] font-semibold">16216</h5>
             <span class="bg-[#F2F2F2] px-5 py-2 rounded-full text-[18px]"
-              >All</span
+              >Electricity</span
             >
           </div>
 
@@ -329,24 +342,26 @@
             </button>
           </div>
         </div>
+ <!-------------------------------- Brac Helpline ------------------------------------------------>
+
         <div
           class="flex flex-col gap-5 justify-between bg-white card w-full p-5 md:p-8 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]"
         >
           <div class="flex items-center justify-between">
             <img
               class="bg-[#FFE3E2] p-3 rounded-[18px] max-w-20"
-              src="assets/ambulance.png"
+              src="assets/emergency.png"
               alt=""
             />
             <i class="text-[#5C5C5C] fa-regular fa-heart text-[30px]"></i>
           </div>
 
           <div>
-            <h2 class="text-[24px] font-semibold">National Emergency Number</h2>
-            <p class="text-[#5C5C5C] text-[18px]">National Emergency</p>
-            <h5 class="mb-2 text-[32px] font-semibold">999</h5>
+            <h2 class="text-[24px] font-semibold">Brac Helpline</h2>
+            <p class="text-[#5C5C5C] text-[18px]">Brac</p>
+            <h5 class="mb-2 text-[32px] font-semibold">16445</h5>
             <span class="bg-[#F2F2F2] px-5 py-2 rounded-full text-[18px]"
-              >All</span
+              >NGO</span
             >
           </div>
 
@@ -364,24 +379,26 @@
             </button>
           </div>
         </div>
+ <!-------------------------------- Bangladesh Railway Helpline  ------------------------------------------------>
+
         <div
           class="flex flex-col gap-5 justify-between bg-white card w-full p-5 md:p-8 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]"
         >
           <div class="flex items-center justify-between">
             <img
               class="bg-[#FFE3E2] p-3 rounded-[18px] max-w-20"
-              src="assets/ambulance.png"
+              src="assets/emergency.png"
               alt=""
             />
             <i class="text-[#5C5C5C] fa-regular fa-heart text-[30px]"></i>
           </div>
 
           <div>
-            <h2 class="text-[24px] font-semibold">National Emergency Number</h2>
-            <p class="text-[#5C5C5C] text-[18px]">National Emergency</p>
-            <h5 class="mb-2 text-[32px] font-semibold">999</h5>
+            <h2 class="text-[24px] font-semibold">Bangladesh Railway Helpline </h2>
+            <p class="text-[#5C5C5C] text-[18px]">Bangladesh Railway</p>
+            <h5 class="mb-2 text-[32px] font-semibold">163</h5>
             <span class="bg-[#F2F2F2] px-5 py-2 rounded-full text-[18px]"
-              >All</span
+              >Travel</span
             >
           </div>
 
@@ -399,13 +416,12 @@
             </button>
           </div>
         </div>
-
 
       </section>
 
     <!-------------------------------- SidBar Section ------------------------------------------------>
 
-      <section class="flex flex-col h-full md:w-2/6 bg-white p-5 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]">
+      <section class="flex flex-col h-full md:w-2/7 bg-white p-5 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]">
 
         <div class="flex items-center justify-between">
         <h5 class="text-[20px] md:text-[24px] font-semibold"><i class="fa-regular fa-clock"></i> Call History</h5>
