--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="flex gap-4  h-[52px]">
           <div class="bg-[#FFEFF0] flex items-center justify-center px-7 rounded-full gap-2">
-            <h5 class="font-semibold text-[20px]">0</h5>
+            <h5 id="heart-count" class="font-semibold text-[20px]">0</h5>
             <img class="w-8 h-8" src="assets/heart.png" alt="" />
           </div>
 
@@ -93,7 +93,7 @@
               src="assets/ambulance.png"
               alt=""
             />
-            <i class="text-[#5C5C5C] fa-regular fa-heart text-[30px]"></i>
+            <i id="heart-icon" class="text-[#5C5C5C] fa-regular fa-heart text-[30px]"></i>
           </div>
 
           <div>
@@ -421,7 +421,7 @@
 
     <!-------------------------------- SidBar Section ------------------------------------------------>
 
-      <section class="flex flex-col h-full md:w-2/7 bg-white p-5 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]">
+      <section class="flex flex-col h-[800px] md:w-2/7 md:sticky md:top-12 bg-white p-5 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]">
 
         <div class="flex items-center justify-between">
         <h5 class="text-[20px] md:text-[24px] font-semibold"><i class="fa-regular fa-clock"></i> Call History</h5>
