--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 
     <!-------------------------------- SidBar Section ------------------------------------------------>
 
-      <section class="flex flex-col h-[800px] md:w-2/7 md:sticky md:top-12 bg-white p-5 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]">
+      <section class="flex flex-col md:h-[800px] md:w-2/7 md:sticky md:top-12 bg-white p-5 rounded-3xl shadow-[0_2px_6px_rgba(0,0,0,0.1)]">
 
         <div class="flex items-center justify-between">
         <h5 class="text-[20px] md:text-[24px] font-semibold"><i class="fa-regular fa-clock"></i> Call History</h5>
